Inventario de incoherencias
